--- a/i18n/en/common.json
+++ b/i18n/en/common.json
@@ -16,7 +16,7 @@
   },
   "Product": {
     "title": "Our Ready Products",
-    "description": "Our eCommerce solution is designed to help businesses create seamless and high-performing online stores. We provide a fully optimized, user-friendly shopping experience with secure payment gateways, intuitive product navigation, and fast-loading pages.",
+    "description": "Our eCommerce solution is designed to help businesses create seamless and high-performing online stores.",
     "sort_by_name": "Sort by Name",
     "sort_by_price": "Sort by Price"
   },
