--- a/i18n/id/common.json
+++ b/i18n/id/common.json
@@ -16,7 +16,7 @@
   },
   "Product": {
     "title": "Produk Kami",
-    "description": "Solusi eCommerce kami dirancang untuk membantu bisnis menciptakan toko online yang mulus dan berkinerja tinggi. Kami menyediakan pengalaman berbelanja yang sepenuhnya dioptimalkan, ramah pengguna, dengan gateway pembayaran yang aman, navigasi produk yang intuitif, dan halaman yang memuat dengan cepat.",
+    "description": "Solusi eCommerce kami dirancang untuk membantu bisnis menciptakan toko online yang mulus dan berkinerja tinggi.",
     "sort_by_name": "Urutkan Nama",
     "sort_by_price": "Urutkan Harga"
   },
